--- a/app/src/main/res/layout/crop_field_list_card.xml
+++ b/app/src/main/res/layout/crop_field_list_card.xml
@@ -153,24 +153,18 @@
 
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="0.44"
+                                    android:layout_weight="1.0"
                                     android:text="Field Type"
                                     android:textColor="@color/colorPrimary"
                                     android:textSize="16sp" />
-                                <TextView
-                                    android:layout_width="0dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="0.14"
-                                    android:text=":"
-                                    android:textStyle="bold"
-                                    />
+
 
 
                                 <TextView
                                     android:id="@+id/txt_crop_field_card_soil_type"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="0.5"
+                                    android:layout_weight="0.9"
                                     android:text="Loamy Sand"
                                     android:textColor="@color/blackText"
                                     android:textStyle="bold"
@@ -197,22 +191,16 @@
                                 <TextView
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="0.44"
+                                    android:layout_weight="1"
                                     android:text="Status"
                                     android:textColor="@color/colorPrimary"
                                     android:textSize="16dp" />
-                                <TextView
-                                    android:layout_width="0dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="0.14"
-                                    android:text=":"
-                                    android:textStyle="bold"
-                                    />
+
                                 <TextView
                                     android:id="@+id/txt_crop_field_card_soil_category"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="0.5"
+                                    android:layout_weight="0.9"
                                     android:text="Light Sand "
                                     android:textColor="@color/blackText"
                                     android:textStyle="bold"
@@ -239,21 +227,15 @@
                                 android:layout_height="wrap_content"
                                 android:text="Croppable Area"
                                 android:textColor="@color/colorPrimary"
-                                android:layout_weight="0.44"
+                                android:layout_weight="1"
                                 android:textSize="16sp" />
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0.14"
-                                android:text=":"
-                                android:textStyle="bold"
-                                />
+
 
                             <TextView
                                 android:id="@+id/txt_crop_field_card_croppable_area"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="0.5"
+                                android:layout_weight="0.9"
                                 android:text="12.45 ha"
                                 android:textColor="@color/blackText"
                                 android:textStyle="bold"
@@ -280,18 +262,16 @@
         android:gravity="end"
         android:padding="0dp"
         android:id="@+id/layout_crop_harvest_card_show_hide"
-        android:background="#B6C5B6"
+        android:background="#a4b7a0"
         >
 
         <ImageView
             android:id="@+id/img_crop_field_card_show_crops"
             android:layout_width="15dp"
             android:layout_height="15dp"
-            android:backgroundTint="@color/black"
-            android:textColor="#D2DDD5"
             android:layout_marginEnd="18.17dp"
             android:layout_marginTop="10dp"
-            android:src="@drawable/arrow_drop_down" />
+            android:src="@drawable/downarrow" />
     </LinearLayout>
 
 
@@ -301,7 +281,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:background="#B6C5B6"
+        android:background="#a4b7a0"
         android:padding="4dp"
         android:visibility="gone"
         >
