--- a/app/src/main/res/layout/crops_list_card.xml
+++ b/app/src/main/res/layout/crops_list_card.xml
@@ -44,100 +44,111 @@
 
 
                                 <LinearLayout
-                                    android:layout_width="match_parent"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:orientation="horizontal"
-                                    android:layout_marginTop="16dp"
-                                    android:layout_weight="0.1">
-                                <Button
+                                    android:layout_weight=".8">
+                                <LinearLayout
                                     android:id="@+id/btn_crop_activities"
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    style="@style/CropButton"
-                                    android:text="Activities"
-                                    android:textAllCaps="true"
+                                    android:layout_gravity="center"
                                     android:layout_weight="1"
-                                    android:layout_marginStart="15dp"
-                                    android:layout_marginEnd="10dp"
-                                    android:textColor="@color/white"
-                                    android:background="@color/colorPrimary"/>
-                                <Button
-                                    android:id="@+id/btn_crop_notes"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Notes"
-                                    style="@style/CropButton"
-                                    android:layout_marginStart="10dp"
-                                    android:layout_marginEnd="10dp"
-                                    android:textAllCaps="true"
-                                    android:layout_weight="1"
-                                    android:background="@color/black"
-                                    android:textColor="@color/white"/>
-                                <Button
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Gallery"
-                                    android:textAllCaps="true"
-                                    android:layout_marginStart="10dp"
-                                    style="@style/CropButton"
-                                    android:layout_weight="1"
-                                    android:textColor="@color/white"
-                                    android:background="@color/colorPrimary"/>
-
-                                    <ImageView
-                                        android:id="@+id/img_crop_card_more"
-                                        android:layout_width="wrap_content"
+                                    android:clickable="true"
+                                    android:layout_margin="@dimen/dimen_5dp"
+                                    android:background="@drawable/crop_card_button_green">
+                                    <TextView
+                                        android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:textColor="#000"
-                                        android:layout_marginStart="10dp"
+                                        android:text="Activities"
+                                        android:textAllCaps="true"
+                                        android:textStyle="bold"
+                                        android:gravity="center_horizontal"
+                                        android:textColor="@color/white"
+                                        android:layout_margin="2dp"/>
+                                </LinearLayout>
+
+                                    <LinearLayout
+                                        android:id="@+id/btn_crop_notes"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_gravity="center"
                                         android:layout_weight="1"
-                                        android:src="@drawable/ic_baseline_more_vert" />
+                                        android:clickable="true"
+                                        android:layout_margin="@dimen/dimen_5dp"
+                                        android:background="@drawable/crop_card_button_black">
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:text="Notes"
+                                            android:textAllCaps="true"
+                                            android:gravity="center_horizontal"
+                                            android:textColor="@color/white"
+                                            android:textStyle="bold"
+                                            android:layout_margin="2dp"/>
+                                    </LinearLayout>
+                                    <LinearLayout
+                                        android:id="@+id/btn_crop_gallery"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_gravity="center"
+                                        android:layout_weight="1"
+                                        android:clickable="true"
+                                        android:layout_margin="@dimen/dimen_5dp"
+                                        android:background="@drawable/crop_card_button_green">
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:text="Gallery"
+                                            android:textAllCaps="true"
+                                            android:gravity="center_horizontal"
+                                            android:textColor="@color/white"
+                                            android:textStyle="bold"
+                                            android:layout_margin="2dp"/>
+                                    </LinearLayout>
 
                                 </LinearLayout>
+                                <ImageView
+                                    android:id="@+id/img_crop_card_more"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight=".02"
+                                    app:tint="#444444"
+                                    android:layout_gravity="center_vertical"
+                                    android:src="@drawable/ic_baseline_more_vert" />
 
                             </LinearLayout>
 
 
                         <View
-                            android:layout_width="312dp"
+                            android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_marginTop="5dp"
-                            android:layout_marginStart="10dp"
                             android:background="#D2D3D2" />
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:paddingStart="20dp"
 
-                            android:layout_marginBottom="25dp"
-                            android:layout_marginTop="8dp"
-                            android:orientation="horizontal">
 
 
 
                             <LinearLayout
                                 android:orientation="vertical"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1">
+                                android:padding="@dimen/dimen_10dp">
 
                                 <LinearLayout
                                     android:orientation="horizontal"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="0.1"
-                                    android:layout_marginLeft="6dp">
+                                    android:layout_height="wrap_content">
 
 
                                     <TextView
                                         android:id="@+id/txt_crop_card_name"
-                                        android:textSize="15dp"
+                                        android:textSize="15sp"
                                         android:textColor="@color/colorPrimary"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:textStyle="bold"
-                                        android:layout_marginRight="5dp"
                                         android:text="Tomatoes " />
 
                                     <TextView
@@ -148,17 +159,15 @@
                                         android:textStyle="bold"
                                         android:text="(Asla Fg)"
                                         android:textColor="@color/colorPrimary"
-                                        android:textSize="15dp" />
+                                        android:textSize="15sp" />
 
 
                                 </LinearLayout>
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginStart="6dp"
-                                    android:layout_marginTop="3dp"
-                                    android:layout_marginBottom="2dp"
-                                    android:orientation="horizontal">
+                                    android:orientation="horizontal"
+                                    android:layout_marginTop="8dp">
 
                                     <TextView
                                         android:layout_width="match_parent"
@@ -183,14 +192,9 @@
                                 <LinearLayout
                                     android:orientation="horizontal"
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content">
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="8dp">
 
-                                    <LinearLayout
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginLeft="6dp"
-                                        android:layout_marginBottom="2dp"
-                                        android:orientation="horizontal">
 
                                         <TextView
                                             android:layout_width="match_parent"
@@ -226,21 +230,14 @@
                                             />
                                         </LinearLayout>
 
-                                    </LinearLayout>
 
 
                                 </LinearLayout>
                                 <LinearLayout
                                     android:orientation="horizontal"
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content">
-
-                                    <LinearLayout
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginStart="6dp"
-                                        android:layout_marginBottom="2dp"
-                                        android:orientation="horizontal">
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="8dp">
 
                                         <TextView
                                             android:layout_width="match_parent"
@@ -280,7 +277,7 @@
                                             android:text="First Season" />
 
                                         </LinearLayout>
-                                    </LinearLayout>
+
 
 
                                 </LinearLayout>
@@ -290,10 +287,8 @@
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginBottom="6dp"
-                                    android:layout_marginStart="6dp"
-
-                                    android:orientation="horizontal">
+                                    android:orientation="horizontal"
+                                    android:layout_marginTop="8dp">
 
                                     <TextView
                                         android:layout_width="match_parent"
@@ -310,8 +305,7 @@
                                         android:layout_weight="1"
                                         android:text="UGX 50,000 /Box"
                                         android:textColor="#000"
-                                         android:textSize="15sp"
-                                        />
+                                         android:textSize="15sp" />
 
 
                                 </LinearLayout>
@@ -320,7 +314,6 @@
 
                             </LinearLayout>
 
-                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
