--- a/app/src/main/res/layout/fragment_add_crop.xml
+++ b/app/src/main/res/layout/fragment_add_crop.xml
@@ -32,8 +32,8 @@
             android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="@dimen/dimen_20dp"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dimen_20dp"
                 android:orientation="vertical">
 
 
@@ -284,7 +284,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginBottom="@dimen/dimen_30dp">
+                    android:layout_marginBottom="@dimen/dimen_20dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -420,7 +420,6 @@
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dimen_10dp"
                     android:layout_marginBottom="@dimen/dimen_20dp"
                     android:background="@drawable/rounded_corners_button">
 
