--- a/app/src/main/res/layout/fragment_add_field.xml
+++ b/app/src/main/res/layout/fragment_add_field.xml
@@ -40,7 +40,23 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="5dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="@dimen/dimen_20dp"
+                    android:layout_marginBottom="@dimen/dimen_20dp"
+                    android:layout_marginStart="@dimen/dimen_10dp">
+                    <TextView
+                        android:id="@+id/crop_action_txt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/title_add_field"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:textColor="@color/blackText"/>
 
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
