--- a/app/src/main/res/layout/fragment_add_medication.xml
+++ b/app/src/main/res/layout/fragment_add_medication.xml
@@ -29,6 +29,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/medication_title"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center"
