--- a/app/src/main/res/navigation/farm_records_nav_graph.xml
+++ b/app/src/main/res/navigation/farm_records_nav_graph.xml
@@ -86,6 +86,9 @@
         <action
             android:id="@+id/action_financialRecordsFragment_to_addFinancialRecordFragment"
             app:destination="@id/addFinancialRecordFragment" />
+        <action
+            android:id="@+id/action_financialRecordsFragment_to_farmRecordsHomeFragment"
+            app:destination="@id/farmRecordsHomeFragment" />
     </fragment>
     <fragment
         android:id="@+id/fieldsListFragment"
