--- a/app/src/main/res/layout/fragment_add_breeding_stock.xml
+++ b/app/src/main/res/layout/fragment_add_breeding_stock.xml
@@ -49,6 +49,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/breeder_form_title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/josefin_sans_semibold"
